# GassAgent

./: .gitignore  README.md  __init__.py  break.py  breakdown_log.json  main.py  pyproject.toml
.ai/plan/: 1.2.json  1.json  2.1.json  2.2.json  2.3.3.json  2.3.json  2.json  3.1.2.json  3.1.json  3.json  4.1.json  4.2.json  4.json  5.json  index.json  phases.json
.ai/schema/: README.md  deployment_guide.md  implementation_plan.json  index.json
.ai/structure/: structure.md
aaaa/backup/: claude_stream.py  leaf_tasks.py  main.py  phase_manager_cli.py  test_leaf_tasks.py
class/: claude_streamer.py  phase_manager.py  worker_monitor.py
claude_tools/: __init__.py  __main__.py  agent_manager.py  break.py  break_helpers.py  claude_streamer.py  init.py  init_helpers.py  main.py  prompt_generator.py  run.py  run_helpers.py  shared_helpers.py  statistics_tracker.py  worker_monitor.py
claude_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
claude_tools/class/: __init__.py  breakdown_system.py  initialization_system.py  phase_manager.py  task_execution_system.py  worker_monitor.py
claude_tools/prompt_template/: database-schema-designer.md  plan-analyzer.md  plan-analyzer.md.backup  plan-breakdown-analyzer.md  project-structure-generator.md  task-analyzer-executor.md  task-status-updater.md  task-validator.md
claude_tools/prompt_tmp/: breakdown_1.1_20251016_182113.txt  (+23 more)
prompt_tmp/: breakdown_1_20251015_230225.txt  breakdown_3.1_20251015_232704.txt  breakdown_5_20251015_233019.txt
test/: README.md  test_class.py  test_phase_manager.py
(+29 files in other folders)
