[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-tools"
version = "0.1.0"
description = "Claude CLI tools for streaming and breakdown automation"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/user/claude-tools"
Repository = "https://github.com/user/claude-tools.git"
Issues = "https://github.com/user/claude-tools/issues"

[project.scripts]
gass = "claude_tools.main:gass_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_tools*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
"claude_tools" = ["prompt_template/*.md", "prompt_tmp/*"]